--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/CyrilleRieau/node_template#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mustache": "^2.3.0"
+    "mustache": "^2.3.0",
+    "xmlhttprequest": "^1.8.0"
   }
 }
