--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "http": "0.0.0",
     "mustache": "^2.3.0",
     "xmlhttprequest": "^1.8.0"
   }
